[project]
name = "file-crypter"
version = "0.1.0"
authors = [{ name="batubyte" }]

description = "A file encrypter and decrypter using Fernet symmetric encryption"
readme = "README.md"
requires-python = ">=3.13"

dependencies = ["cryptography>=45.0.4"]

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Github = "https://github.com/batubyte/file-crypter"
Discord = "https://discord.gg/6H6T8aNbC6"
