[project]
name = "file-crypter"
version = "0.1.1"
authors = [{ name="batubyte" }]
description = "A file encrypter and decrypter using Fernet symmetric encryption"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = ["rich", "cryptography"]

[project.scripts]
file_crypter = "file_crypter:main"

[project.urls]
Github = "https://github.com/batubyte/file-crypter"
